--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Satyajay01/BookStore-MERN#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.3"
   }
