--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/Satyajay01/BookStore-MERN#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "cros": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.3",
