--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Satyajay01/BookStore-MERN#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cros": "^1.0.1",
     "dotenv": "^16.4.5",
